Add hero container

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/main.css" />
 
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-wrapper">
+      <header></header>
+      <section class="section-hero body-gradient">
+        <div class="container">
+          <div class="row flex centered">
+            <h1>we grow mony, guaranteed</h1>
+          </div>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
