Add top nav and hero text

--- a/index.html
+++ b/index.html
@@ -10,11 +10,32 @@
   </head>
   <body>
     <div class="main-wrapper">
-      <header></header>
       <section class="section-hero body-gradient">
+        <header>
+          <div class="container flex">
+            <div class="logo">dinomuz</div>
+            <div class="main-menu">
+              <nav>
+                <a class="uppercase" href="">home</a>
+                <a class="uppercase" href="">generic</a>
+                <a class="uppercase" href="">elements</a>
+              </nav>
+              <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+          </div>
+        </header>
         <div class="container">
-          <div class="row flex centered">
-            <h1>we grow mony, guaranteed</h1>
+          <div class="row flex column centered">
+            <span class="hero-small uppercase">Re-imagining the way</span>
+            <h1 class="uppercase">we grow mony, guaranteed</h1>
+            <a class="btn" href="">
+              <span class="capitalize"> get started </span>
+              <span class="arrow-right"></span>
+            </a>
           </div>
         </div>
       </section>
