Add feature section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/index.css" />
 
     <title>Document</title>
   </head>
@@ -14,16 +14,16 @@
         <header>
           <div class="container flex">
             <div class="logo">dinomuz</div>
-            <div class="main-menu">
+            <div class="main-menu flex centered">
               <nav>
                 <a class="uppercase" href="">home</a>
                 <a class="uppercase" href="">generic</a>
                 <a class="uppercase" href="">elements</a>
               </nav>
-              <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+              <div class="menu-icon flex centered">
+                <span class="menu-bar"></span>
+                <span class="menu-bar"></span>
+                <span class="menu-bar"></span>
               </div>
             </div>
           </div>
@@ -31,11 +31,53 @@
         <div class="container">
           <div class="row flex column centered">
             <span class="hero-small uppercase">Re-imagining the way</span>
-            <h1 class="uppercase">we grow mony, guaranteed</h1>
+            <h1 class="uppercase">we grow money, guaranteed</h1>
             <a class="btn" href="">
               <span class="capitalize"> get started </span>
               <span class="arrow-right"></span>
             </a>
+          </div>
+        </div>
+      </section>
+      <section class="section-feature">
+        <div class="container">
+          <div class="card flex">
+            <div class="card-icon flex centered">
+              <span>&#9788</span>
+            </div>
+            <div class="card-description">
+              <h6>stunning visuals</h6>
+              <p>
+                Here, I focus on a range of items and features that we use in
+                life without giving them a second thought such as Coca Cola,
+                body
+              </p>
+            </div>
+          </div>
+          <div class="card flex">
+            <div class="card-icon flex centered">
+              <span>&lt;/&gt</span>
+            </div>
+            <div class="card-description">
+              <h6>CLEAN CODE</h6>
+              <p>
+                Over 92% of computers are infected with Adware and spyware. Such
+                software is rarely accompanied by uninstall utility
+              </p>
+            </div>
+          </div>
+          <div class="card flex">
+            <div class="card-icon flex centered">
+              <span></span>
+            </div>
+            <div class="card-description">
+              <h6>PUNCTUALITY</h6>
+              <p>
+                If you own an Iphone, you’ve probably already worked out how
+                much fun it is to use it to watch movies-it has that nice big
+                screen
+              </p>
+            </div>
           </div>
         </div>
       </section>
