Add menu-icon functionality

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
   </head>
   <body>
     <div class="main-wrapper">
+      
+      <!-- Section hero -->
       <section class="section-hero body-gradient">
         <header>
           <div class="container flex">
             <div class="logo">dinomuz</div>
             <div class="main-menu flex centered">
-              <nav>
+              <nav class="">
                 <a class="uppercase" href="">home</a>
                 <a class="uppercase" href="">generic</a>
                 <a class="uppercase" href="">elements</a>
               </nav>
-              <div class="menu-icon flex centered">
+              <div class="menu-icon flex centered ">
                 <span class="menu-bar"></span>
                 <span class="menu-bar"></span>
                 <span class="menu-bar"></span>
@@ -39,6 +41,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Section features -->
       <section class="section-feature">
         <div class="container">
           <div class="card flex">
@@ -68,7 +72,7 @@
           </div>
           <div class="card flex">
             <div class="card-icon flex centered">
-              <span></span>
+              <span>&smile;</span>
             </div>
             <div class="card-description">
               <h6>PUNCTUALITY</h6>
@@ -82,5 +86,8 @@
         </div>
       </section>
     </div>
+
+
+    <script src="code/index.js"></script>
   </body>
 </html>
