Add service layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <div class="main-wrapper">
-      
       <!-- Section hero -->
       <section class="section-hero body-gradient">
         <header>
@@ -22,7 +21,7 @@
                 <a class="uppercase" href="">generic</a>
                 <a class="uppercase" href="">elements</a>
               </nav>
-              <div class="menu-icon flex centered ">
+              <div class="menu-icon flex centered">
                 <span class="menu-bar"></span>
                 <span class="menu-bar"></span>
                 <span class="menu-bar"></span>
@@ -47,7 +46,7 @@
         <div class="container">
           <div class="card flex">
             <div class="card-icon flex centered">
-              <span>&#9788</span>
+              <span>&circledS;</span>
             </div>
             <div class="card-description">
               <h6>stunning visuals</h6>
@@ -85,8 +84,117 @@
           </div>
         </div>
       </section>
-    </div>
 
+      <!-- Section service -->
+      <section class="section-service body-gradient">
+        <div class="container">
+          <div class="row flex centered">
+            <div class="header">
+              <h3 class="capitalize">our offered services</h3>
+              <span class="uppercase">re-imagin the way</span>
+            </div>
+          </div>
+          <div class="row service-grid">
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs1.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs2.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs3.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs4.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs5.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs6.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs7.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+            <div class="service-item">
+              <div class="item-header">
+                <img src="./images/xs8.webp" alt="" />
+              </div>
+              <div class="item-body">
+                <h6 class="uppercase">creative desing</h6>
+                <p>
+                  WordPress, the premier free open-source blogging utility, has
+                  gone through several upgrades in
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <script src="code/index.js"></script>
   </body>
