Add service item overlay

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="hero-small uppercase">Re-imagining the way</span>
             <h1 class="uppercase">we grow money, guaranteed</h1>
             <a class="btn" href="">
-              <span class="capitalize"> get started </span>
+              <span class="capitalize">get started</span>
               <span class="arrow-right"></span>
             </a>
           </div>
@@ -98,6 +98,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs1.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
@@ -110,6 +116,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs2.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
@@ -122,6 +134,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs3.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
@@ -134,6 +152,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs4.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
@@ -146,6 +170,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs5.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
@@ -158,6 +188,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs6.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
@@ -170,6 +206,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs7.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
@@ -182,6 +224,12 @@
             <div class="service-item">
               <div class="item-header">
                 <img src="./images/xs8.webp" alt="" />
+                <div class="overlay flex centered">
+                  <a class="btn btn-gradient" href="">
+                    <span class="capitalize">get started</span>
+                    <span class="arrow-right"></span>
+                  </a>
+                </div>
               </div>
               <div class="item-body">
                 <h6 class="uppercase">creative desing</h6>
