--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                 </div>
               </div>
               <div class="item-body">
-                <h6 class="uppercase">creative desing</h6>
+                <h6 class="uppercase">DRIVING LESSON</h6>
                 <p>
-                  WordPress, the premier free open-source blogging utility, has
-                  gone through several upgrades in
+                  The buying of large-screen TVs has absolutely skyrocketed
+                  lately. It seems that everyone wants one –
                 </p>
               </div>
             </div>
@@ -142,10 +142,10 @@
                 </div>
               </div>
               <div class="item-body">
-                <h6 class="uppercase">creative desing</h6>
+                <h6 class="uppercase">CLIMBING STAIRS</h6>
                 <p>
-                  WordPress, the premier free open-source blogging utility, has
-                  gone through several upgrades in
+                  Having used discount toner cartridges for twenty years, there
+                  have been a lot of changes in the
                 </p>
               </div>
             </div>
@@ -160,10 +160,10 @@
                 </div>
               </div>
               <div class="item-body">
-                <h6 class="uppercase">creative desing</h6>
+                <h6 class="uppercase">BIKE ACCIDENT</h6>
                 <p>
-                  WordPress, the premier free open-source blogging utility, has
-                  gone through several upgrades in
+                  Every avid independent filmmaker has dre amed about making
+                  that special interest documentary, or
                 </p>
               </div>
             </div>
@@ -178,10 +178,10 @@
                 </div>
               </div>
               <div class="item-body">
-                <h6 class="uppercase">creative desing</h6>
+                <h6 class="uppercase">CAR DRIVING</h6>
                 <p>
-                  WordPress, the premier free open-source blogging utility, has
-                  gone through several upgrades in
+                  Looking to buy a new computer Overwhelmed by all of the
+                  options available to you? Stressed by the
                 </p>
               </div>
             </div>
@@ -196,10 +196,10 @@
                 </div>
               </div>
               <div class="item-body">
-                <h6 class="uppercase">creative desing</h6>
+                <h6 class="uppercase">BEACH HOTEL</h6>
                 <p>
-                  WordPress, the premier free open-source blogging utility, has
-                  gone through several upgrades in
+                  Shure’s Music Phone Adapter (MPA) is our favorite iPhone
+                  solution, since it lets you use the headphones
                 </p>
               </div>
             </div>
@@ -214,10 +214,10 @@
                 </div>
               </div>
               <div class="item-body">
-                <h6 class="uppercase">creative desing</h6>
+                <h6 class="uppercase">UNDER PASSWAY</h6>
                 <p>
-                  WordPress, the premier free open-source blogging utility, has
-                  gone through several upgrades in
+                  Over 92% of computers are infected with Adware and spyware.
+                  Such software is rarely accompanied by
                 </p>
               </div>
             </div>
@@ -232,10 +232,10 @@
                 </div>
               </div>
               <div class="item-body">
-                <h6 class="uppercase">creative desing</h6>
+                <h6 class="uppercase">DAWN TO DUSK</h6>
                 <p>
-                  WordPress, the premier free open-source blogging utility, has
-                  gone through several upgrades in
+                  Computers have become ubiquitous in almost every facet of our
+                  lives. At work, desk jockeys spend hours in
                 </p>
               </div>
             </div>
@@ -256,24 +256,76 @@
             <div class="carousel-wrapper">
               <div class="slide">
                 <span>5</span>
+                <div>
+                  <h6>vector illustration</h6>
+                  <p>
+                    LCD screens are uniquly modern in style, and the liquid
+                    crystals that make them work have allowed humanity to
+                  </p>
+                </div>
               </div>
-              <div class="slide">
+              <div class="slide active">
                 <span>1</span>
+                <div>
+                  <h6>vector illustration</h6>
+                  <p>
+                    LCD screens are uniquly modern in style, and the liquid
+                    crystals that make them work have allowed humanity to
+                  </p>
+                </div>
               </div>
-              <div class="slide">
+              <div class="slide active">
                 <span>2</span>
+                <div>
+                  <h6>vector illustration</h6>
+                  <p>
+                    LCD screens are uniquly modern in style, and the liquid
+                    crystals that make them work have allowed humanity to
+                  </p>
+                </div>
               </div>
               <div class="slide">
                 <span>3</span>
+                <div>
+                  <h6>vector illustration</h6>
+                  <p>
+                    LCD screens are uniquly modern in style, and the liquid
+                    crystals that make them work have allowed humanity to
+                  </p>
+                </div>
               </div>
               <div class="slide">
-                <span></span>
+                <span>4</span>
+
+                <div>
+                  <h6>vector illustration</h6>
+                  <p>
+                    LCD screens are uniquly modern in style, and the liquid
+                    crystals that make them work have allowed humanity to
+                  </p>
+                </div>
               </div>
               <div class="slide">
                 <span>5</span>
+                1
+                <div>
+                  <h6>vector illustration</h6>
+                  <p>
+                    LCD screens are uniquly modern in style, and the liquid
+                    crystals that make them work have allowed humanity to
+                  </p>
+                </div>
               </div>
               <div class="slide">
                 <span>1</span>
+
+                <div>
+                  <h6>vector illustration</h6>
+                  <p>
+                    LCD screens are uniquly modern in style, and the liquid
+                    crystals that make them work have allowed humanity to
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -283,6 +335,31 @@
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section story -->
+      <section class="section-story body-gradient">
+        <div class="container">
+          <div class="row flex centered">
+            <div class="story-title">
+              <h3 class="capitalize">our untold story</h3>
+              <span class="uppercase">re-imagin the way</span>
+            </div>
+            <div class="story-box">
+              <h6 class="uppercase">from the part of beginning</h6>
+              <p>
+                Usage of the Internet is becoming more common due to rapid
+                advancement of technology and the power of globalization.
+                Societies are becoming more inter-connected. Thoughts from
+                different
+              </p>
+              <a class="btn btn-gradient" href="">
+                <span class="capitalize">get started</span>
+                <span class="arrow-right"></span>
+              </a>
+            </div>
           </div>
         </div>
       </section>
