Add subscribe widget and footer sections

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css"
+      integrity="sha512-Mo79lrQ4UecW8OCcRUZzf0ntfMNgpOFR46Acj2ZtWO8vKhBvD79VCp3VOKSzk6TovLg5evL3Xi3u475Q/jMu4g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="./css/index.css" />
 
     <title>Document</title>
@@ -46,7 +55,7 @@
         <div class="container">
           <div class="card flex">
             <div class="card-icon flex centered">
-              <span>&circledS;</span>
+              <span><i class="fa fa-sun-o" aria-hidden="true"></i></span>
             </div>
             <div class="card-description">
               <h6>stunning visuals</h6>
@@ -59,7 +68,7 @@
           </div>
           <div class="card flex">
             <div class="card-icon flex centered">
-              <span>&lt;/&gt</span>
+              <span><i class="fa fa-code" aria-hidden="true"></i></span>
             </div>
             <div class="card-description">
               <h6>CLEAN CODE</h6>
@@ -71,7 +80,7 @@
           </div>
           <div class="card flex">
             <div class="card-icon flex centered">
-              <span>&smile;</span>
+              <span><i class="fa fa-clock-o"></i></span>
             </div>
             <div class="card-description">
               <h6>PUNCTUALITY</h6>
@@ -363,6 +372,89 @@
           </div>
         </div>
       </section>
+
+      <!-- Section subscribe -->
+      <section class="section-subscribe">
+        <div class="container">
+          <div class="row">
+            <div class="header">
+              <h3 class="">Subscribe for our Newsletter</h3>
+              <p class="uppercase">re-imagin the way</p>
+            </div>
+            <div class="form-container">
+              <form action="" class="flex centered">
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="Email address"
+                />
+                <a class="btn btn-gradient" href="">
+                  <span class="capitalize">get started</span>
+                  <span class="arrow-right"></span>
+                </a>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section widget -->
+      <section class="section-widget">
+        <div class="container">
+          <div class="card flex">
+            <div class="card-icon flex centered">
+              <span><i class="fa fa-paperclip"></i></span>
+            </div>
+            <div class="card-description">
+              <h6>ADDRESS</h6>
+              <p>56/8, panthapath, west dhanmondi, kalabagan, Dhaka - 1205</p>
+            </div>
+          </div>
+          <div class="card flex">
+            <div class="card-icon flex centered">
+              <span><i class="fa fa-globe" aria-hidden="true"></i></span>
+            </div>
+            <div class="card-description">
+              <h6>EMAIL ADDRESS</h6>
+              <p>
+                info@dataarc.com <br />
+                support@dataarc.com
+              </p>
+            </div>
+          </div>
+          <div class="card flex">
+            <div class="card-icon flex centered">
+              <span><i class="fa fa-phone" aria-hidden="true"></i></span>
+            </div>
+            <div class="card-description">
+              <h6>PHONE NUMBER</h6>
+              <p>
+                012 4562 982 3612 <br />
+                012 6321 956 4587
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="container flex">
+          <div class="logo">dinomuz</div>
+          <div class="copyright">
+            Copyright © 2022 | All rights reserved to Dinomuz inc. This template
+            is made with
+            <i class="fa fa-heart-o"></i>
+            by
+            <a href="https://mikaeileghbal.github.io">Mikaeil Eghbal</a>
+          </div>
+          <div class="footer-social">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="code/index.js"></script>
