Fix services image fit problem

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="row flex column centered">
             <span class="hero-small uppercase">Re-imagining the way</span>
             <h1 class="uppercase">we grow money, guaranteed</h1>
-            <a class="btn" href="">
+            <a class="btn btn-hero" href="">
               <span class="capitalize">get started</span>
               <span class="arrow-right"></span>
             </a>
@@ -100,7 +100,7 @@
           <div class="row flex centered">
             <div class="header">
               <h3 class="capitalize">our offered services</h3>
-              <span class="uppercase">re-imagin the way</span>
+              <span class="uppercase">re-imagining the way</span>
             </div>
           </div>
           <div class="row service-grid">
@@ -258,7 +258,7 @@
           <div class="row flex centered">
             <div class="header">
               <h3 class="capitalize">our amazing works</h3>
-              <span class="uppercase">re-imagin the way</span>
+              <span class="uppercase">re-imagining the way</span>
             </div>
           </div>
           <div class="row carousel">
@@ -354,7 +354,7 @@
           <div class="row flex centered">
             <div class="story-title">
               <h3 class="capitalize">our untold story</h3>
-              <span class="uppercase">re-imagin the way</span>
+              <span class="uppercase">re-imagining the way</span>
             </div>
             <div class="story-box">
               <h6 class="uppercase">from the part of beginning</h6>
@@ -379,7 +379,7 @@
           <div class="row">
             <div class="header">
               <h3 class="">Subscribe for our Newsletter</h3>
-              <p class="uppercase">re-imagin the way</p>
+              <p class="uppercase">re-imagining the way</p>
             </div>
             <div class="form-container">
               <form action="" class="flex centered">
@@ -408,7 +408,10 @@
             </div>
             <div class="card-description">
               <h6>ADDRESS</h6>
-              <p>56/8, panthapath, west dhanmondi, kalabagan, Dhaka - 1205</p>
+              <p>
+                56/8, panthapath, west dhanmondi, kalabagan,<br />
+                Dhaka - 1205
+              </p>
             </div>
           </div>
           <div class="card flex">
